Package_Tools/include-C/sixel/sixel.pp


{ pixelformat type of input image
   NOTE: for compatibility, the value of PIXELFORAMT_COLOR_RGB888 must be 3  }
{ 15bpp  }
{ 16bpp  }
{ 24bpp  }
{ 15bpp  }
{ 16bpp  }
{ 24bpp  }
{ 32bpp  }
{ 32bpp  }
{ 1bpp grayscale  }
{ 2bpp grayscale  }
{ 4bpp grayscale  }
{ 8bpp grayscale  }
{ 16bpp gray+alpha  }
{ 16bpp gray+alpha  }
{ 1bpp palette  }
{ 2bpp palette  }
{ 4bpp palette  }
{ 8bpp palette  }
type
  TpixelFormat =  Longint;
  Const
    PIXELFORMAT_RGB555 = FORMATTYPE_COLOR or $01;
    PIXELFORMAT_RGB565 = FORMATTYPE_COLOR or $02;
    PIXELFORMAT_RGB888 = FORMATTYPE_COLOR or $03;
    PIXELFORMAT_BGR555 = FORMATTYPE_COLOR or $04;
    PIXELFORMAT_BGR565 = FORMATTYPE_COLOR or $05;
    PIXELFORMAT_BGR888 = FORMATTYPE_COLOR or $06;
    PIXELFORMAT_ARGB8888 = FORMATTYPE_COLOR or $10;
    PIXELFORMAT_RGBA8888 = FORMATTYPE_COLOR or $11;
    PIXELFORMAT_G1 = FORMATTYPE_GRAYSCALE or $00;
    PIXELFORMAT_G2 = FORMATTYPE_GRAYSCALE or $01;
    PIXELFORMAT_G4 = FORMATTYPE_GRAYSCALE or $02;
    PIXELFORMAT_G8 = FORMATTYPE_GRAYSCALE or $03;
    PIXELFORMAT_AG88 = FORMATTYPE_GRAYSCALE or $13;
    PIXELFORMAT_GA88 = FORMATTYPE_GRAYSCALE or $23;
    PIXELFORMAT_PAL1 = FORMATTYPE_PALETTE or $00;
    PIXELFORMAT_PAL2 = FORMATTYPE_PALETTE or $01;
    PIXELFORMAT_PAL4 = FORMATTYPE_PALETTE or $02;
    PIXELFORMAT_PAL8 = FORMATTYPE_PALETTE or $03;

{ palette type  }
{ choose palette type automatically  }
{ HLS colorspace  }
{ RGB colorspace  }
type
  TpaletteType =  Longint;
  Const
    PALETTETYPE_AUTO = 0;
    PALETTETYPE_HLS = 1;
    PALETTETYPE_RGB = 2;

{ policies of SIXEL encoding  }
{ choose encoding policy automatically  }
{ encode as fast as possible  }
{ encode to as small sixel sequence as possible  }
type
  TencodePolicy =  Longint;
  Const
    ENCODEPOLICY_AUTO = 0;
    ENCODEPOLICY_FAST = 1;
    ENCODEPOLICY_SIZE = 2;

{ method for re-sampling  }
{ Use nearest neighbor method  }
{ Use guaussian filter  }
{ Use hanning filter  }
{ Use hamming filter  }
{ Use bilinear filter  }
{ Use welsh filter  }
{ Use bicubic filter  }
{ Use lanczos-2 filter  }
{ Use lanczos-3 filter  }
{ Use lanczos-4 filter  }
type
  TmethodForResampling =  Longint;
  Const
    RES_NEAREST = 0;
    RES_GAUSSIAN = 1;
    RES_HANNING = 2;
    RES_HAMMING = 3;
    RES_BILINEAR = 4;
    RES_WELSH = 5;
    RES_BICUBIC = 6;
    RES_LANCZOS2 = 7;
    RES_LANCZOS3 = 8;
    RES_LANCZOS4 = 9;

{$endif}
type
  Psixel_malloc_t = ^Tsixel_malloc_t;
  Tsixel_malloc_t = function (para1:Tsize_t):pointer;cdecl;

  Psixel_calloc_t = ^Tsixel_calloc_t;
  Tsixel_calloc_t = function (para1:Tsize_t; para2:Tsize_t):pointer;cdecl;

  Psixel_realloc_t = ^Tsixel_realloc_t;
  Tsixel_realloc_t = function (para1:pointer; para2:Tsize_t):pointer;cdecl;

  Tsixel_free_t = procedure (para1:pointer);cdecl;
  Psixel_allocator = ^Tsixel_allocator;
  Tsixel_allocator = record
      {undefined structure}
    end;

  Tsixel_allocator = Tsixel_allocator_t;
{ C++ extern C conditionnal removed }
{ create allocator object  }
{ out  }{ allocator object to be created  }
{ in  }{ custom malloc() function  }
{ in  }{ custom calloc() function  }
{ in  }{ custom realloc() function  }
{ in  }
function sixel_allocator_new(ppallocator:PPsixel_allocator_t; fn_malloc:Tsixel_malloc_t; fn_calloc:Tsixel_calloc_t; fn_realloc:Tsixel_realloc_t; fn_free:Tsixel_free_t):TSIXELSTATUS;cdecl;external;
{ custom free() function  }
{ increase reference count of allocator object (thread-unsafe)  }
{ in  }procedure sixel_allocator_ref(allocator:Psixel_allocator_t);cdecl;external;
{ allocator object to be
                                                increment reference counter  }
{ decrease reference count of output context object (thread-unsafe)  }
procedure sixel_allocator_unref(allocator:Psixel_allocator_t);cdecl;external;
{ call custom malloc()  }
{ in  }{ allocator object  }
{ in  }function sixel_allocator_malloc(allocator:Psixel_allocator_t; n:Tsize_t):pointer;cdecl;external;
{ allocation size  }
{ call custom calloc()  }
{ in  }{ allocator object  }
{ in  }{ allocation size  }
{ in  }function sixel_allocator_calloc(allocator:Psixel_allocator_t; nelm:Tsize_t; elsize:Tsize_t):pointer;cdecl;external;
{ allocation size  }
{ call custom realloc()  }
{ in  }{ allocator object  }
{ in  }{ existing buffer to be re-allocated  }
{ in  }function sixel_allocator_realloc(allocator:Psixel_allocator_t; p:pointer; n:Tsize_t):pointer;cdecl;external;
{ re-allocation size  }
{ call custom free()  }
{ in  }{ allocator object  }
{ in  }procedure sixel_allocator_free(allocator:Psixel_allocator_t; p:pointer);cdecl;external;
{ existing buffer to be freed  }
{$ifdef HAVE_TESTS}
  var
    sixel_debug_malloc_counter : longint;cvar;external;

function sixel_bad_malloc(size:Tsize_t):pointer;cdecl;external;
function sixel_bad_calloc(count:Tsize_t; size:Tsize_t):pointer;cdecl;external;
function sixel_bad_realloc(ptr:pointer; size:Tsize_t):pointer;cdecl;external;
{$endif}
{ HAVE_TESTS  }
{ C++ end of extern C conditionnal removed }
{ output context manipulation API  }
type
  Psixel_output = ^Tsixel_output;
  Tsixel_output = record
      {undefined structure}
    end;

  Tsixel_output = Tsixel_output_t;

  Tsixel_write_function = function (data:Pchar; size:longint; priv:pointer):longint;cdecl;
{ C++ extern C conditionnal removed }
{ create new output context object  }
{ out  }{ output object to be created  }
{ in  }{ callback for output sixel  }
{ in  }{ private data given as
                                                       3rd argument of fn_write  }
{ in  }
function sixel_output_new(output:PPsixel_output_t; fn_write:Tsixel_write_function; priv:pointer; allocator:Psixel_allocator_t):TSIXELSTATUS;cdecl;external;
{ allocator, null if you use
                                                       default allocator  }
{ deprecated: create an output object  }
{ __attribute__((deprecated)) }
{ in  }{ callback for output sixel  }
{ in  }function sixel_output_create(fn_write:Tsixel_write_function; priv:pointer):Psixel_output_t;cdecl;external;
{ private data given as
                                               3rd argument of fn_write  }
{ destroy output context object  }
{ in  }procedure sixel_output_destroy(output:Psixel_output_t);cdecl;external;
{ output context  }
{ increase reference count of output context object (thread-unsafe)  }
{ in  }procedure sixel_output_ref(output:Psixel_output_t);cdecl;external;
{ output context  }
{ decrease reference count of output context object (thread-unsafe)  }
{ in  }procedure sixel_output_unref(output:Psixel_output_t);cdecl;external;
{ output context  }
{ get 8bit output mode which indicates whether it uses C1 control characters  }
{ in  }function sixel_output_get_8bit_availability(output:Psixel_output_t):longint;cdecl;external;
{ output context  }
{ set 8bit output mode state  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_8bit_availability(output:Psixel_output_t; availability:longint);cdecl;external;
{ 0: do not use 8bit characters
                                              1: use 8bit characters  }
{ set whether limit arguments of DECGRI('!') to 255  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_gri_arg_limit(output:Psixel_output_t; value:longint);cdecl;external;
{ 0: don't limit arguments of DECGRI
                                        1: limit arguments of DECGRI to 255  }
{ set GNU Screen penetration feature enable or disable  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_penetrate_multiplexer(output:Psixel_output_t; penetrate:longint);cdecl;external;
{ 0: penetrate GNU Screen
                                           1: do not penetrate GNU Screen  }
{ set whether we skip DCS envelope  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_skip_dcs_envelope(output:Psixel_output_t; skip:longint);cdecl;external;
{ 0: output DCS envelope
                                          1: do not output DCS envelope  }
{ set palette type: RGB or HLS  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_palette_type(output:Psixel_output_t; palettetype:longint);cdecl;external;
{ PALETTETYPE_RGB: RGB palette
                                             PALETTETYPE_HLS: HLS palette  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_ormode(output:Psixel_output_t; ormode:longint);cdecl;external;
{ set encodeing policy: auto, fast or size  }
{ in  }{ output context  }
{ in  }procedure sixel_output_set_encode_policy(output:Psixel_output_t; encode_policy:longint);cdecl;external;
{ C++ end of extern C conditionnal removed }
{ color quantization API  }
{ handle type of dither context object  }
type
  Psixel_dither = ^Tsixel_dither;
  Tsixel_dither = record
      {undefined structure}
    end;
